--- a/src/main/resources/monopoly/interface/GamePlay.fxml
+++ b/src/main/resources/monopoly/interface/GamePlay.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckMenuItem?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -26,6 +27,7 @@
                   <Menu mnemonicParsing="false" text="Game">
                      <items>
                         <MenuItem mnemonicParsing="false" onAction="#newGame" text="New Game" />
+                        <CheckMenuItem fx:id="alertCheck" mnemonicParsing="false" onAction="#alertSwitch" selected="true" text="Alerts" />
                         <MenuItem mnemonicParsing="false" onAction="#exit" text="Close" />
                      </items>
                   </Menu>
