--- a/src/main/resources/monopoly/interface/Begin.fxml
+++ b/src/main/resources/monopoly/interface/Begin.fxml
@@ -39,6 +39,14 @@
                               <Font size="14.0" />
                            </font>
                         </TextField>
+                        <CheckBox fx:id="botCheck1" mnemonicParsing="false" onAction="#botAction1" prefHeight="35.0" prefWidth="104.0" text="Компьютер">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets left="20.0" />
+                           </HBox.margin>
+                        </CheckBox>
                      </children>
                   </HBox>
                   <HBox prefHeight="43.0" prefWidth="564.0">
@@ -53,7 +61,7 @@
                               <Font size="14.0" />
                            </font>
                         </TextField>
-                        <CheckBox fx:id="botCheck1" mnemonicParsing="false" onAction="#botAction1" prefHeight="35.0" prefWidth="104.0" text="Компьютер">
+                        <CheckBox fx:id="botCheck2" mnemonicParsing="false" onAction="#botAction2" prefHeight="35.0" prefWidth="104.0" text="Компьютер">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -75,7 +83,7 @@
                               <Font size="14.0" />
                            </font>
                         </TextField>
-                        <CheckBox fx:id="botCheck2" disable="true" mnemonicParsing="false" onAction="#botAction2" prefHeight="35.0" prefWidth="104.0" text="Компьютер">
+                        <CheckBox fx:id="botCheck3" disable="true" mnemonicParsing="false" onAction="#botAction3" prefHeight="35.0" prefWidth="104.0" text="Компьютер">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -97,7 +105,7 @@
                               <Font size="14.0" />
                            </font>
                         </TextField>
-                        <CheckBox fx:id="botCheck3" disable="true" mnemonicParsing="false" onAction="#botAction3" prefHeight="35.0" prefWidth="104.0" text="Компьютер">
+                        <CheckBox fx:id="botCheck4" disable="true" mnemonicParsing="false" onAction="#botAction4" prefHeight="35.0" prefWidth="104.0" text="Компьютер">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -119,7 +127,7 @@
                               <Font size="14.0" />
                            </font>
                         </TextField>
-                        <CheckBox fx:id="botCheck4" disable="true" mnemonicParsing="false" onAction="#botAction4" prefHeight="35.0" prefWidth="104.0" text="Компьютер">
+                        <CheckBox fx:id="botCheck5" disable="true" mnemonicParsing="false" onAction="#botAction5" prefHeight="35.0" prefWidth="104.0" text="Компьютер">
                            <font>
                               <Font size="14.0" />
                            </font>
