--- a/src/main/resources/monopoly/interface/GamePlay.fxml
+++ b/src/main/resources/monopoly/interface/GamePlay.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckMenuItem?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.ImageInput?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -28,6 +30,7 @@
                      <items>
                         <MenuItem mnemonicParsing="false" onAction="#newGame" text="New Game" />
                         <CheckMenuItem fx:id="alertCheck" mnemonicParsing="false" onAction="#alertSwitch" selected="true" text="Alerts" />
+                        <CheckMenuItem fx:id="actionLogChek" mnemonicParsing="false" onAction="#actionLogSwitch" selected="true" text="Action log" />
                         <MenuItem mnemonicParsing="false" onAction="#exit" text="Close" />
                      </items>
                   </Menu>
@@ -545,6 +548,13 @@
                               </Button>
                            </bottom>
                         </BorderPane>
+                        <TextArea fx:id="textArea" accessibleRole="TEXT" cacheShape="false" centerShape="false" depthTest="DISABLE" editable="false" focusTraversable="false" layoutX="10.0" layoutY="202.0" pickOnBounds="false" prefHeight="310.0" prefWidth="582.0" scaleShape="false" style="-fx-control-inner-background:#d7d6d0; -fx-highlight-text-fill: #d7d6d0; " wrapText="true">
+                           <cursor>
+                              <Cursor fx:constant="DEFAULT" />
+                           </cursor>
+                           <font>
+                              <Font name="Times New Roman" size="20.0" />
+                           </font></TextArea>
                         <ImageView fx:id="firstdice1" fitHeight="120.0" fitWidth="120.0" layoutX="150.0" layoutY="350.0" opacity="0.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../fields/dice1.png" />
@@ -727,7 +737,7 @@
                               </Button>
                            </children>
                         </AnchorPane>
-                        <AnchorPane fx:id="negativeAction" disable="true" layoutX="5.0" layoutY="203.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="0.0" prefHeight="366.0" prefWidth="588.0" style="-fx-background-color: #d7d6d0;">
+                        <AnchorPane fx:id="negativeAction" disable="true" layoutX="5.0" layoutY="187.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="0.0" prefHeight="380.0" prefWidth="588.0" style="-fx-background-color: #d7d6d0;">
                            <children>
                               <Label layoutX="129.0" text="Случилось происшетсвие!">
                                  <font>
